--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Adding Makeup - Yay!</h1>
     <button>click me</button>
+    <h1>Heyy Buddy, I can push to Github now!!</h1>
 </body>
 </html>
