this is another git test

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     
 </head>
 <body>
-    <h1>Adding Makeup - Yay!</h1>
-    <button>click me</button>
-    <h1>Heyy Buddy, I can push to Github now!!</h1>
+    <h1>This is another git test</h1>
+    <p>Hello, I am making this changes to see the git add command</p>
 </body>
 </html>
