third commit for testing

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>This is another git test</h1>
     <p>Hello, I am making this changes to see the git add command</p>
+    <p>This is another changes, and I can push it to github without any error</p>
 </body>
 </html>
